--- a/vexflow.html
+++ b/vexflow.html
@@ -11,9 +11,9 @@
 <div id="output"></div>
 
 <script>
-	const { Renderer, Stave } = Vex.Flow;
+	const { Renderer, Stave, StaveNote, Voice, Formatter } = Vex.Flow;
 
-	// Create an SVG renderer and attach it to the DIV element named "boo".
+	// Create an SVG renderer and attach it to the DIV element named "output"
 	const div = document.getElementById("output");
 	const renderer = new Renderer(div, Renderer.Backends.SVG);
 
@@ -29,6 +29,34 @@
 
 	// Connect it to the rendering context and draw!
 	stave.setContext(context).draw();
+
+
+
+	// Create the notes
+	const notes = [
+	    // A quarter-note C.
+	    new StaveNote({ keys: ["c/4"], duration: "q" }),
+
+	    // A quarter-note D.
+	    new StaveNote({ keys: ["d/4"], duration: "q" }),
+
+	    // A quarter-note rest. Note that the key (b/4) specifies the vertical
+	    // position of the rest.
+	    new StaveNote({ keys: ["b/4"], duration: "qr" }),
+
+	    // A C-Major chord.
+	    new StaveNote({ keys: ["c/4", "e/4", "g/4"], duration: "q" }),
+	];
+
+	// Create a voice in 4/4 and add above notes
+	const voice = new Voice({ num_beats: 4, beat_value: 4 });
+	voice.addTickables(notes);
+
+	// Format and justify the notes to 400 pixels.
+	new Formatter().joinVoices([voice]).format([voice], 350);
+
+	// Render voice
+	voice.draw(context, stave);
 </script>
 
 </body>
