--- a/vexflow.html
+++ b/vexflow.html
@@ -11,6 +11,7 @@
 <div id="output"></div>
 
 <script>
+	// similar to importing classes; alternative to Vex.Flow.Renderer, etc.
 	const { Renderer, Stave, StaveNote, Voice, Formatter } = Vex.Flow;
 
 	// Create an SVG renderer and attach it to the DIV element named "output"
