--- a/keyboard-input.html
+++ b/keyboard-input.html
@@ -3,18 +3,30 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>basic input demo</title>
+	<title>Keyboard Input</title>
 	<script src="js/input.js"></script>
 </head>
+
+<style>
+
+.border
+{
+    border-width: 2px;
+    border-style: solid;
+    border-color: black;
+    margin: 10px;
+    padding: 10px
+}
+
+</style>
+
 <body>
 
 <hr>
 
-See the JS console for more output.
+<p>While this window has focus, try pressing the "A" and "Z" keys.</p>
 
-<hr>
-
-<div id="outputDiv"></div>
+<div id="outputDiv" class="border"></div>
 
 <hr>
 
