update WebMIDI basic example

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
     <p><a href="vexflow-dynamic.html">Dynamic Vexflow Input</a></p>
     <p>Press keyboard keys corresponding to piano notes (see diagram on page) and the corresponding notes will be rendered on a music staff. Builds on code from the Keyboard Input and Vexflow examples. Diagram generated from code based on the Canvas: Piano Keys and Labels example.</p>
   </li>
+  <li>
+    <p><a href="webmidi.html">WebMIDI Test</a></p>
+    <p>Uses the <a href="https://webmidijs.org/">WebMIDI.js</a> library. 
+      Basic setup for detecting connected MIDI keyboards and listening for input events.
+      Only confirmed to work with Google Chrome browser.</p>
+  </li>
   
 </ul>
 
