--- a/index.html
+++ b/index.html
@@ -60,10 +60,15 @@
     <p>Press keyboard keys corresponding to piano notes (see diagram on page) and the corresponding notes will be rendered on a music staff. Builds on code from the Keyboard Input and Vexflow examples. Diagram generated from code based on the Canvas: Piano Keys and Labels example.</p>
   </li>
   <li>
-    <p><a href="webmidi.html">WebMIDI Test</a></p>
+    <p><a href="webmidi.html">WebMIDI Connection Test</a></p>
     <p>Uses the <a href="https://webmidijs.org/">WebMIDI.js</a> library. 
       Basic setup for detecting connected MIDI keyboards and listening for input events.
-      Only confirmed to work with Google Chrome browser.</p>
+      This and the following WebMIDI examples are only confirmed to work fully with Google Chrome browser.</p>
+  </li>
+  <li>
+    <p><a href="webmidi-howler.html">Playing audio with WebMIDI</a></p>
+    <p>Connect a MIDI instrument and play piano note audio files when corresponding keys on the MIDI instrument are pressed. 
+      Builds on the code from the Howler and WebMIDI examples.</p>
   </li>
   
 </ul>
