--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
     <p>Connect a MIDI instrument and play piano note audio files when corresponding keys on the MIDI instrument are pressed. 
       Builds on the code from the Howler and WebMIDI examples.</p>
   </li>
+  <li>
+    <p><a href="webmidi-transpose.html">Transposing notes with WebMIDI</a></p>
+    <p>Connect a MIDI instrument and use a slider to transpose the notes that are played. 
+      Builds on the code from the jQuery, Howler, and WebMIDI examples.</p>
+  </li>
   
 </ul>
 
