Create interactive piano diagram (keyboard input)

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <p>Responding to real-time keyboard input. Builds on code from the Loop example. </p>
   </li>
   <li>
+    <p><a href="canvas-piano-interactive.html">Interactive Piano Diagram</a></p>
+    <p>Press keyboard keys corresponding to piano notes (see diagram on page) and the corresponding notes will be highlighted on a separate diagram. Builds on code from the Keyboard Input and Canvas Piano examples.</p>
+  </li>
+  <li>
     <p><a href="vexflow-dynamic.html">Dynamic Vexflow Input</a></p>
     <p>Press keyboard keys corresponding to piano notes (see diagram on page) and the corresponding notes will be rendered on a music staff. Builds on code from the Keyboard Input and Vexflow examples. Diagram generated from code based on the Canvas: Piano Keys and Labels example.</p>
   </li>
