--- a/canvas-piano-interactive.html
+++ b/canvas-piano-interactive.html
@@ -27,7 +27,7 @@
 <hr>
 <img src="images/keyboard-piano-2.png">
 <hr>
-<p>Press the keyboard keys on the diagram above and 
+<p>On the computer keyboard, press the keys referred to on the diagram above and
     the corresponding piano keys on the diagram below will be highlighted.</p>
 <hr>
 <canvas id="myCanvas" class="border"></canvas>
