Create interactive piano diagram, plays audio, midi input

--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
     <p>Connect a MIDI instrument and use a slider to transpose the notes that are played. 
       Builds on the code from the jQuery, Howler, and WebMIDI examples.</p>
   </li>
+  <li>
+    <p><a href="webmidi-canvas-piano.html">Playing audio with WebMIDI - updated graphics</a></p>
+    <p>Connect a MIDI instrument and play piano note audio files when corresponding keys on the MIDI instrument are pressed. 
+      Builds on the code from the jQuery, Howler, WebMIDI, and Canvas Piano examples.</p>
+  </li>
   
 </ul>
 
